# wc2026-world-cup-predictor

./: .gitignore  .mcp.json  LICENSE  PLAN.md  README.md  build_static.py  pyproject.toml  requirements.txt
.claude/: mcp_server.py  settings.local.json
.claude/agents/: wc2026-analyst.md
.claude/skills/mermaid/: SKILL.md
.claude/skills/mermaid/references/: classDiagram.md  config-configuration.md  config-directives.md  config-layouts.md  config-math.md  config-theming.md  config-tidy-tree.md  gantt.md  sequenceDiagram.md  xyChart.md
.claude/skills/world-cup/: SKILL.md
.github/workflows/: deploy.yml
data/: elo_ratings.json  historical_matches.json  teams.json
slides/: intro.md  wc2026-pechakucha.md
slides/templates/: pechakucha-6x20.md
tests/: test_data.py  test_models.py  test_predictor.py  test_score_fetcher.py
wc2026/: __init__.py  __main__.py  cli.py  data.py  display.py  models.py  predictor.py  score_fetcher.py  web_server.py
wc2026/templates/: base.html  groups.html  index.html  match_detail.html  matches.html  predict.html  teams.html
