[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wc2026"
version = "0.1.0"
description = "2026 FIFA World Cup match predictor using Elo ratings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
wc2026 = "wc2026.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["wc2026*"]
